# achilles

./: .gitignore  Makefile  README.md  SPEC.md  TECH.md  achilles  achilles.py  barcodereader.py  config-prod.php  detectupc.py  foo.pgdump  generateupc.py  htaccess-prod  importachillescsv.py  importcsv.py  libachilles.py  links.txt  notes.md  pringles-upc.xcf  pyproject.toml  setup.py  testbarcode.py  vulcan-achilles-20230707.csv
achilles.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
js/: Makefile
php/: achilles.php  fooditem.php  index.php  page.php
py/: Makefile  scan_image.py  tkfooditem.py
py/src/: Makefile
py/src/achilles/: __init__.py  __main__.py  _version.py  add.py  conf.py  delete.py  edit.py  fooditem.py  lib.py  list.py  main.py  ui_schema.py
skin/scss/: Makefile  achilles.scss
skin/tmpl/: Makefile  changelog.tmpl  index.tmpl  nutrition-guides.tmpl  page.tmpl
sql/: Makefile  achilles.sql  additive.sql  attachment.sql  brand.sql  corp.sql  distributor.sql  equipment.sql  fooditem.sql  ingredient.sql  lab.sql  manuf.sql  map_fooditem_additive.sql  merchant.sql  purchase.sql  retailer.sql  schema.sql  seller.sql  staff.sql  symptom.sql  test.sql  vendor.sql
www/: Makefile  README.md  changelog  config-prod.php  htaccess-prod  links.txt  queue.txt
www/php/: Makefile  achilles.php  bed.php  database.php  fooditem.php  index.php  ping.php  section.php
www/skin/: Makefile
www/skin/art/: Makefile
www/skin/css/: achilles.css  section.css  topbar.css
www/skin/js/: Makefile  accordian.js  achilles.js  get_barcode_from_image.js  section.js
(+103 files in other folders)
