[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "achilles"
dynamic = ["version"]
description = "Tracking use of MSG (mono-sodium glutamate) and related additives"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.9,<3.13"
authors = [
    {name = "zoid technologies", email = "achilles@projects.zoidtechnologies.com"},
]
dependencies = [
    "bbsengine6",
    "psycopg[binary]",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
achilles = "achilles.main:main"

[tool.setuptools.packages.find]
where = ["py/src"]

[tool.setuptools.dynamic]
version = {attr = "achilles.__version__"}

[tool.ruff]
target-version = "py39"
